# oei-espcam

./: CMakeLists.txt  ansible.cfg  cap.py  idf_component.yml  justfile  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32cam  sdkconfig.esp32cam  sdkconfig.old  snap_capture.py  snap_debug.py  snap_host.py
ansible/: hosts.ini  raspi-esp32-setup.yml
main/: CMakeLists.txt  main.c
